# gale

./: create-gale-auth-tree  gale-install.in  meson.build
gdomain/: meson.build
gsend/: meson.build
gsub/: meson.build
include/: meson.build
kutils/: meson.build
libgale/: meson.build  misc_charset.c
liboop/: meson.build
server/: meson.build
