includes = include_directories('.')
install_headers('gale/all.h', 'gale/client.h',
                'gale/compat.h', 'gale/core.h',
                'gale/crypto.h', 'gale/globals.h',
                'gale/gsubrc.h', 'gale/key.h',
                'gale/misc.h', 'gale/types.h',
                subdir: 'gale')


subdir('gale')
